<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- STREAMING TOOLS group -->
    <item
        android:id="@+id/drawer_network_stream"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/drawer_network_stream" />

    <item
        android:id="@+id/drawer_playlists"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/drawer_playlists" />

    <item
        android:id="@+id/drawer_floating_player"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/drawer_floating_player" />

    <!-- PREFERENCES group -->
    <item
        android:id="@+id/drawer_video_quality"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/drawer_video_quality" />

    <item
        android:id="@+id/drawer_crash_log"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/drawer_crash_log" />

    <!-- INFO & COMMUNITY group -->
    <item
        android:id="@+id/drawer_notice"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/drawer_notice" />

    <item
        android:id="@+id/drawer_join_us"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/drawer_join_us" />

    <item
        android:id="@+id/drawer_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/drawer_share" />

    <item
        android:id="@+id/drawer_update"
        android:icon="@drawable/ic_drawer_update"
        android:title="@string/drawer_update" />

    <item
        android:id="@+id/drawer_exit"
        android:icon="@drawable/ic_drawer_exit"
        android:title="@string/drawer_exit" />

</menu>
